--- a/.extra/install
+++ b/.extra/install
@@ -1,33 +1,10 @@
 #!/bin/bash
 set -e
+echo "running subinstalls" >&2
+(cd libs && make install)
 
-if [[ -d "libs" ]]; then
-	if [[ -e "/usr/local/lib64/libcustomutils" ]]; then
-		echo -n "existing installation found, override it? (y/n):" >&2
-		read -n 1 yn
-		echo
-		case $yn in
-			"y")
-				echo "removing installation" >&2
-				rm -r /usr/local/lib64/libcustomutils
-				;;
-			"n")
-				echo "exiting" >&2
-				exit 1
-				;;
-			*)
-				echo "didn't recognize that"
-				exit 2
-		esac
-	fi
-	echo "moving libs to /usr/local/lib64" >&2
-	mv libs /usr/local/lib64/libcustomutils
-	echo "linking /usr/local/lib64/libcustomutils back to current directory" >&2
-	ln -s /usr/local/lib64/libcustomutils libs
-	echo "makeing libcustomutils linkable as -lcustomutils" >&2
-	ln -sf libcustomutils/.shared.so /usr/local/lib64/libcustomutils.so
-	echo "running subinstall" >&2
-	cd libs && make install
-else
-	echo "could not install libcustomutils, already installed" >&2
-fi
+echo "creating /lib64 inside install directory" >&2
+mkdir -p "$installdir"/lib64
+echo "creating -lcustomutils inside install /lib64" >&2
+cp libs/.shared.so "$installdir"/lib64/libcustomutils.so
+cp libs/.static.a "$installdir"/lib64/libcustomutils.a
