--- a/libs/.extra/install
+++ b/libs/.extra/install
@@ -1,27 +1,12 @@
 #!/bin/bash
+set -e
 
-declare -- yn
-if [[ ! -L "headers" ]]; then
-	if [[ -e "/usr/local/include/CustomUtils" ]]; then
-		echo -n "headers are already installed, override them? (y/n):" >&2
-		read -n 1 yn
-		echo
-		case $yn in
-			"y")
-				echo "overriding headers"
-				rm -r "/usr/local/include/CustomUtils"
-				;;
-			"n")
-				echo "exiting..."
-				exit 1
-				;;
-			*)
-				echo "didn't recognize that"
-				exit 2
-		esac
-	fi
-	mv headers /usr/local/include/CustomUtils
-	ln -s /usr/local/include/CustomUtils headers
+if [[ -d "${installdir}/include/CustomUtils" ]]; then
+	echo "removing previous header installation" >&2
+	rm -r "${installdir}/include/CustomUtils"
 fi
 
-cd headers && make
+echo "making include directory" >&2
+mkdir -p "${installdir}/include/CustomUtils"
+echo "installing header files" >&2
+cp -t "${installdir}/include/CustomUtils" headers/*.hpp
