--- a/libs/.extra/install
+++ b/libs/.extra/install
@@ -8,4 +8,4 @@ fi
 echo "making include directory" >&2
 mkdir -p -v "${installabs}/include/CustomUtils"
 echo "installing header files" >&2
-cp -u -t "${installabs}/include/CustomUtils" headers/*.hpp
+cp -v -u -t "${installabs}/include/CustomUtils" headers/*.hpp
