--- a/libs/.extra/install
+++ b/libs/.extra/install
@@ -6,6 +6,7 @@ if [[ -d "${installabs}/include/CustomUtils" ]]; then
 fi
 
 echo "making include directory" >&2
-mkdir -p -v "${installabs}/include/CustomUtils"
+mkdir -p -v "${installabs}/include/CustomUtils/.hidden"
 echo "installing header files" >&2
 cp -v -u -t "${installabs}/include/CustomUtils" headers/*.hpp
+cp -v -u -t "${installabs}/include/CustomUtils/.hidden" headers/.hidden/*.hpp
