--- a/libs/.extra/install
+++ b/libs/.extra/install
@@ -8,5 +8,5 @@ fi
 echo "making include directory" >&2
 mkdir -p -v "${installabs}/include/CustomUtils/.hidden"
 echo "installing header files" >&2
-cp -v -u -t "${installabs}/include/CustomUtils" headers/*.hpp
-cp -v -u -t "${installabs}/include/CustomUtils/.hidden" headers/.hidden/*.hpp
+cp -u -t "${installabs}/include/CustomUtils" headers/*.hpp
+cp -u -t "${installabs}/include/CustomUtils/.hidden" headers/.hidden/*.hpp
