--- a/libs/.extra/install
+++ b/libs/.extra/install
@@ -5,8 +5,8 @@ if [[ -d "${installabs}/include/CPPExtensions" ]]; then
 	(cd headers && .extra/rmdep)
 fi
 
-echo "making include directory" >&2
+echo "making include directory"
 mkdir -p -v "${installabs}/include/CPPExtensions/.part"
-echo "installing header files" >&2
-cp -u -t "${installabs}/include/CPPExtensions" headers/*.hpp
-cp -u -t "${installabs}/include/CPPExtensions/.part" headers/.part/*.hpp
+echo "installing header files"
+cp --preserve=timestamps -u -t "${installabs}/include/CPPExtensions" headers/*.hpp
+cp --preserve=timestamps -u -t "${installabs}/include/CPPExtensions/.part" headers/.part/*.hpp
