--- a/libs/.extra/install
+++ b/libs/.extra/install
@@ -9,6 +9,6 @@ echo "making include directory"
 mkdir -p -v "${installabs}/include/CPPExtensions/.part"
 mkdir -p -v "${installabs}/include/CPPExtensions/.c_extern"
 echo "installing header files"
-cp --preserve=timestamps -u -t "${installabs}/include/CPPExtensions" headers/*.hpp
-cp --preserve=timestamps -u -t "${installabs}/include/CPPExtensions/.part" headers/.part/*.hpp
+cp --preserve=timestamps -u -t "${installabs}/include/CPPExtensions" headers/*$H_EXT
+cp --preserve=timestamps -u -t "${installabs}/include/CPPExtensions/.part" headers/.part/*$H_EXT
 cp --preserve=timestamps -u -t "${installabs}/include/CPPExtensions/.c_extern" headers/.c_extern/*.h
