--- a/libs/.extra/install
+++ b/libs/.extra/install
@@ -1,14 +1,14 @@
 #!/bin/bash
 set -e
 
-if [[ -d "${installabs}/include/CPPExtensions" ]]; then
+if [[ -d "${installabs}/include/${current_head}" ]]; then
 	(cd headers && .extra/rmdep)
 fi
 
 echo "making include directory"
-mkdir -p -v "${installabs}/include/CPPExtensions/.part"
-mkdir -p -v "${installabs}/include/CPPExtensions/.c_extern"
+mkdir -p -v "${installabs}/include/${current_head}/.part"
+mkdir -p -v "${installabs}/include/${current_head}/.c_extern"
 echo "installing header files"
-cp --preserve=timestamps -u -t "${installabs}/include/CPPExtensions" headers/*$H_EXT
-cp --preserve=timestamps -u -t "${installabs}/include/CPPExtensions/.part" headers/.part/*$H_EXT
-cp --preserve=timestamps -u -t "${installabs}/include/CPPExtensions/.c_extern" headers/.c_extern/*.h
+cp --preserve=timestamps -u -t "${installabs}/include/${current_head}" headers/*$H_EXT
+cp --preserve=timestamps -u -t "${installabs}/include/${current_head}/.part" headers/.part/*$H_EXT
+cp --preserve=timestamps -u -t "${installabs}/include/${current_head}/.c_extern" headers/.c_extern/*.h
