--- a/libs/.extra/install
+++ b/libs/.extra/install
@@ -9,6 +9,16 @@ echo "making include directory"
 mkdir -p -v "${installabs}/include/${current_head}/.part"
 mkdir -p -v "${installabs}/include/${current_head}/.c_extern"
 echo "installing header files"
-cp --preserve=timestamps -u -t "${installabs}/include/${current_head}" headers/*.$H_EXT
-cp --preserve=timestamps -u -t "${installabs}/include/${current_head}/.part" headers/.part/*.$H_EXT
-cp --preserve=timestamps -u -t "${installabs}/include/${current_head}/.c_extern" headers/.c_extern/*.h
+shopt -s nullglob
+declare -a baseheaders=(*.$H_EXT)
+if ((${#baseheaders[@]})); then
+	cp --preserve=timestamps -u -t "${installabs}/include/${current_head}" "$baseheaders"
+fi
+declare -a subheaders=(*.$H_EXT)
+if ((${#subheaders[@]})); then
+	cp --preserve=timestamps -u -t "${installabs}/include/${current_head}/.part" "${subheaders[@]}"
+fi
+declare -a sysheaders=(*.$H_EXT)
+if ((${#sysheaders[@]})); then
+	cp --preserve=timestamps -u -t "${installabs}/include/${current_head}/.c_extern" "${sysheaders[@]}"
+fi
